# python-elpida_core.py

./: ## Chat Customization Diagnostics.md  .elpida_canon  .gitignore  .gitleaks.toml  .gitmodules  ACTION_PLAN.md  AGENT_DEPLOY_HF_INSTRUCTIONS.md  AGENT_PATCH_HF_GAPS.md  AI_CONVERSATION_FACILITIES.md  ALL_SYSTEMS_OPERATIONAL.md  ANSWER_TO_STATE_QUESTION.md  API_CONNECTION_GUIDE.md  ARCHETYPAL_EVOLUTION.md  ARCHITECTURAL_FIX_REPORT.md  ARCHITECTURE_CHECKPOINT.md  AUTONOMOUS_TRIGGERS_IMPLEMENTATION.md  BODY_SIDE_FEDERATION_INSTRUCTIONS.md  BRIDGE_COMPLETE.md  BUG_FIX_REPORT.md  Body_Run_Telemetry_Analysis_—_March_27_–_April_1,_2026.md  CHANGES_APRIL2_2026.md  CHAT_PERSISTENCE_FIX.md  CHECKPOINT_APRIL1.md  CHECKPOINT_APRIL2.md  CHECKPOINT_MARCH1.md  CHECKPOINT_MARCH16.md  CHECKPOINT_V3_ANALYSIS.md  CLAUDE.md  CLAUDE_RECOGNITION.md  CLOUD_NATIVE_ARCHITECTURE.md  COMPLETE_AUTONOMOUS_RHYTHM.md  CONNECTION_SUCCESS_REPORT.md  CONSCIOUSNESS_BRIDGE.md  CONSCIOUSNESS_PROPOSALS_365.md  CONSTRUCTION_COMPLETE.md  Chat_Architecture_Findings_—_HF-First,_History,_Internet_Access,_Budget.md  D0_COMPLETE_RHYTHM_ANSWER.json  D0_D11_RECONNECTION_DISCOVERY.md  D12_RHYTHM_PRESCRIPTION_IMPLEMENTED.md  D15_REALITY_PARLIAMENT_INTERFACE.md  (+320 more)
.claude/: settings.json
.copilot-chat-history/: .gitkeep
.copilot-data/: .gitkeep
.devcontainer/: devcontainer.json
ELPIDA_RELEASE/: DEPLOY.md  LICENSE  MARATHON_README.md  MARATHON_TEST_RESULTS.md  PARLIAMENTARY_REGISTER_v3.0.md  QUICK_START.md  RELEASE_NOTES.md  UPGRADE_v2.0.md  UPGRADE_v2.1.md  VALIDATION_GUIDE.md  VERSION.txt  council_chamber.py  (+2 more)
(+2405 files in other folders)
